--- a/Serilog.Elastic.Kibana.WebApi/Serilog.Elastic.Kibana.WebApi/Serilog.Elastic.Kibana.WebApi.csproj
+++ b/Serilog.Elastic.Kibana.WebApi/Serilog.Elastic.Kibana.WebApi/Serilog.Elastic.Kibana.WebApi.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Faker.Net" Version="1.5.136" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+    <PackageReference Include="Serilog.Exceptions" Version="5.6.0" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
   </ItemGroup>
 
 </Project>
