--- a/Serilog.Elastic.Kibana.WebApi/Serilog.Elastic.Kibana.WebApi/appsettings.json
+++ b/Serilog.Elastic.Kibana.WebApi/Serilog.Elastic.Kibana.WebApi/appsettings.json
@@ -1,10 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "ElasticSearchUrl": "http://localhost:9200",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Verbose", //Verbose//Information
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
