Modified   Serilog.LogFile.WebApi/Serilog.LogFile.WebApi/Serilog.LogFile.WebApi.csproj Modified   Serilog.LogFile.WebApi/Serilog.LogFile.WebApi/appsettings.json

--- a/Serilog.LogFile.WebApi/Serilog.LogFile.WebApi/appsettings.json
+++ b/Serilog.LogFile.WebApi/Serilog.LogFile.WebApi/appsettings.json
@@ -13,7 +13,10 @@
       { "Name": "Console" },
       {
         "Name": "RollingFile",
-        "Args": { "pathFormat": "Logs/log-{Date}.txt" }
+        "Args": {
+          "pathFormat": "Logs/log-{Date}.json",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
       }
     ]
   }
